--- a/config/locales/views/admin.ru.yml
+++ b/config/locales/views/admin.ru.yml
@@ -1,4 +1,8 @@
 ru:
-  adm_welcome: Добро пожаловать в интерфейс администратора!
-  adm_welcome_desc: Приветствуем вас в почти что самом сердце сайта — интерфейсе администратора. Помните, что круче этого места лишь ручная правка файлов/коммиты в базу, и что здесь надо триста раз подумать, прежде чем принимать решения. Не забудьте сделать резервную копию важных данных!
-  adminiface: Интерфейс администратора
+  adm_welcome: "Добро пожаловать в интерфейс администратора!"
+  adm_welcome_desc: "Приветствуем вас в почти что самом сердце сайта — интерфейсе администратора. Помните, что круче этого места лишь ручная правка файлов/коммиты в базу, и что здесь надо триста раз подумать, прежде чем принимать решения. Не забудьте сделать резервную копию важных данных!"
+  adminiface: "Интерфейс администратора"
+  rails: "Rails"
+  ruby: "Ruby"
+  systeminfo: "Системная информация"
+  version: "Версия %{product}: %{version}"
