--- a/config/locales/common/messages.ru.yml
+++ b/config/locales/common/messages.ru.yml
@@ -1,3 +1,4 @@
 ru:
   newadmin: "Новым администратором назначен %{user}!"
   nouser: "По всей видимости, вы только что установили e4, или же у вас полетела нахрен база ;-) Пожалуйста, зарегистрируйте первого пользователя, чтобы начать работу с сайтом. Имейте в виду то, что он станет администратором автоматически."
+  translations_ftw: "Не забывайте при добавлении/редактировании объектов проверять и поправлять все доступные переводы для него!"
