--- a/config/locales/common/header.ru.yml
+++ b/config/locales/common/header.ru.yml
@@ -1,5 +1,6 @@
 ru:
   login: "Войти"
+  no_avaliable_menulinks: "Ссылок для главного меню не обнаружено"
   register: "Зарегистрироваться"
   welcome: "Добро пожаловать, %{user}!"
   footer_html: '© 2014 %{team}<br>Сайт построен на силе Ruby on Rails. Создано <a href="http://delta-zet.com">ООО "Дельта-Зет"</a>'
