--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -12,11 +12,11 @@ ru:
           desc: Кто-то (по всей видимости вы) запросил восстановление пароля для вашего аккаунта. Чтобы подтвердить запрос, перейдите по ссылке ниже.
       register:
         confirmation:
-          missed: Не получили письмо с подтверждением пароля?
+          missed: Не получили письмо с подтверждением e-mail?
           action: Подтвердить регистрацию!
           congratulations: Поздравляем вас с регистрацией в сообществе %{site}! Для того, чтобы войти в систему, нужно подтвердить электропочту. Используйте ссылку ниже, чтобы сделать это прямо сейчас.
           decline: Если вы считаете, что это письмо попало к вам по ошибке, просто ничего не предпринимайте.
-          retry: Повторить письмо с подтверждением пароля
+          retry: Повторить письмо с подтверждением e-mail
         register: Зарегистрироваться
         signup: Регистрация
       request: Запросить %{obj}
@@ -85,7 +85,12 @@ ru:
       desc: Добро пожаловать в интерфейс администратора! Это — центральное место настройки всего сайта (ну, после правки исходников и ручного ковыряния в db, ясное дело). Будьте аккуратны и не забывайте делать важные изменения помолясь.
       title: Центр управления приветствует вас!
     messages:
-      keep_translations_clean: Следите за локализацией и не допускайте отсутствия локализации в каком-либо языке в создаваемых вами объектах!
+      keep_translations_clean: Следите за локализацией и не допускайте отсутствия локализации в каком-либо языке в создаваемых вами объектах! Если вы не можете перевести что-либо на нужный другой язык, оставьте пустое поле, чтобы знающий переводчик смог сразу помочь вам.
+    forum:
+      interface: Управление форумом
+      index:
+        desc: Здесь вы можете добавлять, редактировать и удалять категории и подкатегории форума, а так же объявлять категории форума новостными.
+        title: Управление форумом
   objects:
     menulink:
       self: ссылку в главное меню
