--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -71,6 +71,13 @@ ru:
         url: Внутренний путь, куда указывает ссылка
         title_en: Название на английском языке
         title_ru: Название на русском языке
+      metaforum:
+        desc: Описание
+        desc_en: Описание на английском языке
+        desc_ru: Описание на русском языке
+        title: Название
+        title_en: Заголовок на английском языке
+        title_ru: Заголовок на русском языке
   admin:
     interface: Интерфейс администратора
     menulinks:
@@ -96,3 +103,6 @@ ru:
       self: ссылку в главное меню
       creation: Создание ссылки в главном меню
       edition: Редактирование ссылки в главном меню
+    metaforum:
+      self: метафорум
+      creation: Создание метафорума
