--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -78,6 +78,15 @@ ru:
         title: Название
         title_en: Заголовок на английском языке
         title_ru: Заголовок на русском языке
+      forum:
+        desc: Описание
+        title: Заголовок
+        title_ru: Заголовок на русском языке
+        title_en: Заголовок на английском языке
+        desc_ru: Описание на русском языке
+        desc_en: Описание на английском языке
+        url: Ссылка
+        range: Порядок сортировки
   admin:
     interface: Интерфейс администратора
     menulinks:
@@ -107,3 +116,6 @@ ru:
       self: метафорум
       creation: Создание метафорума
       edition: Редактирование метафорума
+    forum:
+      self: форум
+      creation: Создание форума
