--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -120,3 +120,6 @@ ru:
       self: форум
       creation: Создание форума
       edition: Редактирование форума
+  forum:
+    welcome:
+      title: Форум
