--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -34,6 +34,9 @@ ru:
         no_avaliable_menulinks: В главном меню нету ссылок.
         no_users: Судя по всему, e4 был только что установлен, или же ты опять похерил базу ;-) Пожалуйста, зарегистрируйте первого пользователя. Учтите, что ему будут автоматически присвоены права администратора.
         form_invalid: Форма заполнена неправильно. Пожалуйста, исправьте ошибки, и попробуйте ещё раз.
+        self_banned: пользователь самозабанился
+        forbidden: Действие над объектом невозможно, потому что %{reason}.
+        non_empty: объект не пуст
       help:
         we_need_email: Нам нужен ваш E-mail для подтверждения регистрации и полной убеждённости в том, что вы не бот.
         enter_your_passwd_for_confirm: (введите ваш пароль для подтверждения изменений)
@@ -65,6 +68,7 @@ ru:
         remember_me: Запомнить меня
         password_restore: восстановление пароля
         registration: регистрацию
+        new_password: Введите новый пароль
       menulink:
         range: ! '"Вес" ссылки'
         title: Заголовок
@@ -87,6 +91,9 @@ ru:
         desc_en: Описание на английском языке
         url: Ссылка
         range: Порядок сортировки
+      post:
+        created_at: Дата создания
+        title: Заголовок
   admin:
     interface: Интерфейс администратора
     menulinks:
@@ -120,6 +127,8 @@ ru:
       self: форум
       creation: Создание форума
       edition: Редактирование форума
+    password:
+      changing: Изменение пароля
   forum:
     welcome:
       title: Форум
