--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -43,6 +43,7 @@ ru:
         keep_blank: (оставьте пароль пустым, если не хотите его менять)
         self_ban: ! 'Надоело? Используйте эту ссылку: '
         no_need_to_slash: Передний и заключительный слеши вводятся автоматически, не нужно вводить их тут
+        rules_reminder: Не забывайте соблюдать правила форума и будьте взаимовежливы!
       warnings:
         new_admin: Новым администратором назначен %{user}!
         are_you_sure: Вы уверены? Это действие нельзя отменить!
@@ -96,6 +97,8 @@ ru:
         title: Заголовок
         message: Сообщение
         subject: Заголовок
+      comment:
+        body: Комментарий
   admin:
     interface: Интерфейс администратора
     menulinks:
@@ -134,6 +137,16 @@ ru:
     post:
       self: сообщение
       creation: Добавление сообщения
+    comment:
+      count:
+        zero: Нет комментариев
+        other: ! 'Комментариев: %{count}'
+        one: ! '%{count} комментарий.'
+        few: ! '%{count} комментария.'
+        many: ! '%{count} комментариев.'
+        content_item: комментарий
+      self: комментарий
+      this_is_a_reply: ! 'Ответ на комментарий #%{to}.'
   forum:
     welcome:
       title: Форум
