--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -106,6 +106,7 @@ ru:
       index:
         desc: Главное меню находится справа вверху. Ссылки в нём идут слева направа по "весу" — ссылки с большим "весом" левее. Ссылки с одинаковым "весом" идут в алфавитном порядке.
         title: Управление ссылками в главном меню
+      personalisation: Настройка персонализации сайта
     settings: Настройки
     systeminfo: Системная информация
     version: ! 'Версия %{product}: %{version}'
@@ -150,5 +151,5 @@ ru:
   forum:
     welcome:
       title: Форум
-  next_label: ! '>'
-  previous_label: <
+  next_label: следующая
+  previous_label: предыдущая
