--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -99,6 +99,10 @@ ru:
         subject: Заголовок
       comment:
         body: Комментарий
+      personalisation:
+        data: Значение
+        data_ru: Значение на русском языке
+        data_en: Значение на английском языке
   admin:
     interface: Интерфейс администратора
     menulinks:
@@ -120,6 +124,40 @@ ru:
       index:
         desc: Здесь вы можете добавлять, редактировать и удалять категории и подкатегории форума, а так же объявлять категории форума новостными.
         title: Управление форумом
+    personalisation:
+      index:
+        title: Сделайте сайт действительно своим!
+        desc_html: ! 'В этом разделе вы можете изменить вещи, используемые практически везде — название сайта, команды и e-mail адрес отправляющихся писем. Кроме того, вы можете изменить ссылку на главную страницу</p>
+
+
+          <h4>Описание каждого блока</h4>
+
+
+          <p>Первые три блока можно изменять спокойно, не опасаясь за работоспособность сайта.</p>
+
+
+          <ul>
+
+          <li>Первый блок отвечает за заголовок сайта (располагается в левой части заголовка вашего браузера)</li>
+
+          <li>Второй блок задаёт название команды администраторов сайта. Используется в footer-е и в присылаемых письмах</li>
+
+          <li>Третий блок задаёт имя сайта (используется на логотипе)</li>
+
+          </ul>
+
+
+          <p>Следующие блоки следует изменять лишь только в случае, если вы знаете, что делаете!</p>
+
+
+          <ul>
+
+          <li>Четвёртый блок содержит в себе e-mail, используемый для отправки сообщений пользователям. Задание неверного значения может поломать отправку e-mail пользователям (что повлечёт за собой невозможность регистрации)</li>
+
+          <li>Пятый блок содержит Rails-ссылку на контроллер, который будет отвечать на запрос главной страницы. В случае задания неверного значения сайт будет неработоспособен полностью.</li>
+
+          </ul>'
+      interface: Персонализация сайта
   objects:
     menulink:
       self: ссылку в главное меню
@@ -148,6 +186,8 @@ ru:
         content_item: комментарий
       self: комментарий
       this_is_a_reply: ! 'Ответ на комментарий #%{to}.'
+    personalisation:
+      self: строку персонализации
   forum:
     welcome:
       title: Форум
