--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -55,6 +55,10 @@ ru:
       not_implemented:
         desc: Функционал данной страницы ещё не реализован. Сожалеем об этом.
         title: В стадии разработки
+      '404':
+        desc: Страница по запрошенному адресу не существует, была удалена или перенесена. Сожалеем об этом.
+        title: 404. Страница не найдена.
+        get_back: Вернуться назад
     greetings:
       welcome: Добро пожаловать, %{user}!
       hello: Здравствуйте, %{user}!
@@ -216,3 +220,5 @@ ru:
   newslenta:
     welcome:
       title: Новости
+  user:
+    not_found_in_database: Пользователь не найден
