static pages done

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -117,6 +117,15 @@ ru:
         data: Значение
         data_ru: Значение на русском языке
         data_en: Значение на английском языке
+      page:
+        title: Заголовок
+        uri: URL
+      static_page:
+        title_en: Заголовок на английском языке
+        title_ru: Заголовок на русском языке
+        content_en: Содержание страницы на английском языке
+        content_ru: Содержание страницы на русском языке
+        uri: URL
   admin:
     interface: Интерфейс администратора
     menulinks:
@@ -125,6 +134,7 @@ ru:
         desc: Главное меню находится справа вверху. Ссылки в нём идут слева направа по "весу" — ссылки с большим "весом" левее. Ссылки с одинаковым "весом" идут в алфавитном порядке.
         title: Управление ссылками в главном меню
       personalisation: Настройка персонализации сайта
+      pages: Статические страницы
     settings: Настройки
     systeminfo: Системная информация
     version: ! 'Версия %{product}: %{version}'
@@ -172,6 +182,22 @@ ru:
 
           </ul>'
       interface: Персонализация сайта
+    pages:
+      index:
+        title: Статические страницы
+        desc_html: ! 'Здесь вы можете управлять статическими страницами. Помните о следующем:
+
+
+          <ul>
+
+          <li>Сайт мультиязычен, и страницы тоже!</li>
+
+          <li>Невозможно создание страницы с URL, пересекающимся с URL-ами остальных контроллеров сайта.</li>
+
+          <li>Контент страницы рендерится с помощью markdown.</li>
+
+          </ul>'
+      interface: Управление статическими страницами
   objects:
     menulink:
       self: ссылку в главное меню
@@ -212,6 +238,12 @@ ru:
       self: новостную ленту
     article:
       self: новость
+    page:
+      self: страницу
+      creation: Создание статической страницы
+      errors:
+        invalid_start: не может пересекаться с другим контроллером (%{busy})
+      edition: Редактирование статической страницы
   forum:
     welcome:
       title: Форум
@@ -222,3 +254,8 @@ ru:
       title: Новости
   user:
     not_found_in_database: Пользователь не найден
+  crudify:
+    failed_create: Объект не был создан
+    created: Объект создан
+    destroyed: Объект удалён
+    updated: Объект обновлён
