--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -117,6 +117,15 @@ en:
         data: Value
         data_ru: Value on Russian language
         data_en: Value on Engilsh language
+      page:
+        title: Title
+        uri: URL
+      static_page:
+        title_en: Title in English
+        content_en: Page's content in English
+        content_ru: Page's content in Russian
+        title_ru: Title in Russian
+        uri: URL
   admin:
     interface: Administrative interface
     menulinks:
@@ -125,6 +134,7 @@ en:
         desc: Main menu located at the top right corner. Links respawns in it by "range", from left (highest range) to right (lowest range). Links with the same range will be placed in alphabetical order.
         title: Managing main menu links
       personalisation: Site personalisation settings
+      pages: Static pages
     settings: Settings
     systeminfo: System information
     version: ! '%{product} version: %{version}'
@@ -172,6 +182,22 @@ en:
 
           </ul>'
       interface: Site personalisation
+    pages:
+      index:
+        title: Static pages
+        desc_html: ! 'Here you can manage static pages. There are some good advises:
+
+
+          <ul>
+
+          <li>Site is multilingual. Don''t forget to i18n!</li>
+
+          <li>You can''t create a page with URL which will cross with current site controllers.</li>
+
+          <li>Page''s content rendering with markdown</li>
+
+          </ul>'
+      interface: Static pages administration
   objects:
     menulink:
       self: main menu link
@@ -210,6 +236,12 @@ en:
       self: news forum
     article:
       self: article
+    page:
+      self: page
+      creation: Static page creation
+      errors:
+        invalid_start: can't cross with another controller (%{busy})
+      edition: Static page edition
   forum:
     welcome:
       title: Forum
@@ -220,3 +252,8 @@ en:
       title: News
   user:
     not_found_in_database: User not found
+  crudify:
+    failed_create: Failed to create an object
+    created: Object created
+    destroyed: Object destroyed
+    updated: Object updated
